--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-node_modules/*
+*/node_modules/*
 
 #ignore thumbnails created by windows
 Thumbs.db
@@ -29,3 +29,4 @@ obj/
 _ReSharper*/
 [Tt]est[Rr]esult*
 node_modules/
+*/node_modules/*
