--- a/playground/ferfun/exam/package.json
+++ b/playground/ferfun/exam/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng", 
+    "ng": "ng",
     "start": "ng serve --proxy-config ./proxy.json --live-reload false",
     "server": "./node_modules/.bin/ts-node ./server/lessons-server.ts",
     "build": "ng build",
@@ -21,8 +21,13 @@
     "@angular/http": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/router": "^4.4.6",
+    "@types/request": "0.0.30",
+    "angularfire2": "^5.0.0-rc.4",
     "core-js": "^2.4.1",
+    "firebase": "^3.7.4",
+    "firebase-queue": "^1.5.0",
+    "lodash": "^4.15.0",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
